# reachy2-sdk-rerun

./: .gitattributes  .gitignore  README.md  setup.cfg
.github/workflows/: pytest.yml
blueprints/: camera_view.rbl
scripts/git_hooks/: pre-commit
src/: generate_urdf.py  main.py  rerun_recorder.py
src/config_files/: CONFIG_CUSTOM_SR.json  CONFIG_IMX296.json
src/example/: cam_config.py  xterrabot.py
tests/: test_config.py
