[metadata]
name = reachy-sdk-rerun
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/reachy2-sdk-rerun
description = Reachy2 SDK - Rerun
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    reachy2-sdk==1.0.9
    xacrodoc==0.6.0
	rerun-sdk==0.21.0
    rerun-loader-python-example-urdf@git+https://github.com/rerun-io/rerun-loader-python-example-urdf.git@5a74d7247956fd37118533351c9714036d218780

[options.packages.find]
where=src

[options.package_data]
config_files =
  *.json

[options.extras_require]
dev = black==23.12.1
      flake8==7.0.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.8.0
      isort==5.13.2

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True